<resources>
    <string name="app_name">College Canteen</string>
    <string name="dvynshgpt">dvynshgpt</string>
    <string name="drinks">Drinks</string>
    <string name="icon">Icon</string>
    <string name="order">Order</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="login">Login</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="profile">Profile</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="fastFood">Fast Food</string>
    <string name="_91">+91</string>
    <string name="auth">auth</string>
    <string name="verify_mobile">Verify mobile</string>
    <string name="verify">Verify</string>
    <string name="logout">Logout</string>
    <string name="phone_number">Phone Number</string>
    <string name="username">\@username</string>
    <string name="college_canteen">College Canteen</string>
    <string name="logo">logo</string>
    <string name="get_otp">Get OTP</string>
    <string name="mail">mail</string>
    <string name="insta">insta</string>
    <string name="web">web</string>
    <string name="fast_food">Fast Food</string>
    <string name="burger">Burger</string>
    <string name="pizza">Pizza</string>
    <string name="sandwich">Sandwich</string>
    <string name="donuts">Donuts</string>
    <string name="hot_dog">Hot Dog</string>
    <string name="popcorn">Popcorn</string>
    <string name="select_your_choice">Select your choice</string>
    <string name="desserts">Desserts</string>
    <string name="snacks">Snacks</string>
    <string name="connectUs">Connect Us</string>
    <string name="choose_your_flavour">Choose Your Flavour</string>
    <string name="select_your_flavour">Select your Flavour</string>
    <string name="name">Name</string>
    <string name="delivery_information">Delivery Information</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="place_your_order">Place your Order</string>
    <string name="available_phone_number">Available Phone Number</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="price_rs_50">Price: Rs. 50/-</string>
    <string name="cod_on_every_order">*COD on every order</string>
</resources>