<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"/>

    <item
        android:id="@+id/order"
        android:title="@string/order"
        android:icon="@drawable/ic_baseline_bookmark_24"/>

    <item
        android:id="@+id/setting"
        android:title="@string/setting"
        android:icon="@drawable/ic_baseline_settings_24"/>

    <item android:title="@string/profile">

        <menu>

            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout"
                android:icon="@drawable/ic_baseline_login_24"/>

        </menu>

    </item>

    <item android:title="@string/communicate">

        <menu>

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/share"/>

            <item
                android:id="@+id/nav_rate_us"
                android:icon="@drawable/ic_baseline_star_rate_24"
                android:title="@string/rate_us"/>

        </menu>

    </item>

</menu>