<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_image"
    android:weightSum="2"
    tools:context=".activities.PhoneAuth">


    <!-- App logo -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp">

        <ImageView
            android:contentDescription="@string/logo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/logo3" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/college_canteen"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:textSize="40sp"
        android:fontFamily="cursive"/>



    <!--    Input Phone No-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="150dp"
        android:gravity="top|center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="40dp"
            android:paddingEnd="0dp"
            android:text="@string/login"
            android:textColor="#444444"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="40dp"
            android:paddingTop="10dp"
            android:paddingRight="40dp"
            android:paddingBottom="10dp">

            <EditText
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:autofillHints="hint"
                android:enabled="false"
                android:inputType="none"
                android:minHeight="48dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/_91"
                android:textColor="#1F1F1F"
                android:backgroundTint="@color/teal_200"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/_91"
                android:inputType="phone"
                android:minHeight="48dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="#1F1F1F"
                android:backgroundTint="@color/teal_700"
                tools:ignore="LabelFor,SpeakableTextPresentCheck" />
        </LinearLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="274dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_btn"
            android:text="@string/get_otp"
            android:textSize="15sp" />
    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->


<!--        <ImageView-->
<!--            android:contentDescription="@string/mail"-->
<!--            android:layout_width="40dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:src="@drawable/mail"-->
<!--            android:layout_marginStart="118dp"/>-->

<!--        <ImageView-->
<!--            android:contentDescription="@string/insta"-->
<!--            android:layout_width="40dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:src="@drawable/insta"-->
<!--            android:layout_marginStart="25dp"/>-->

<!--        <ImageView-->
<!--            android:contentDescription="@string/web"-->
<!--            android:layout_width="40dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_marginStart="25dp"-->
<!--            android:src="@drawable/website" />-->
<!--    </LinearLayout>-->

</LinearLayout>