<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    android:background="#ffff"
    tools:context=".activities.FastFoodProductActivity"
    tools:openDrawer="start"

    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_flavour"
            android:textSize="35sp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/purple_200">
        </TextView>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:rowCount="2">

            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FDA88B"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"
                >

                <LinearLayout
                    android:id="@+id/fastFood"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:backgroundTint="#FDA88B"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="12dp"
                        android:contentDescription="@string/icon"
                        android:src="@drawable/burger" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/fastFood"
                        android:textColor="@color/white"
                        android:layout_marginTop="20dp"
                        android:textSize="20sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="12dp"
                android:backgroundTint="#6CD5C6"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:id="@+id/drinks"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginTop="12dp"
                        android:contentDescription="@string/icon"
                        android:src="@drawable/drink1"
                        android:background="#6CD5C6"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/drinks"
                        android:textColor="@color/white"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="12dp"

                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"
                android:backgroundTint="#F69ED8">

                <LinearLayout
                    android:id="@+id/desserts"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="12dp"
                        android:contentDescription="@string/icon"
                        android:src="@drawable/sweets" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/desserts"
                        android:textColor="@color/white"
                        android:layout_marginTop="0dp"
                        android:textSize="20sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="12dp"
                android:backgroundTint="#A0D69A"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:id="@+id/snacks"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="12dp"
                        android:contentDescription="@string/icon"
                        android:src="@drawable/snack1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/snacks"
                        android:textColor="@color/white"
                        android:layout_marginTop="20dp"
                        android:textSize="20sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>

        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="144dp"
            android:layout_height="50dp"
            android:background="#0000FFFF"
            android:text="@string/logout"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/purple_200"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>



    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>